--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "express-validator": "^5.1.0",
     "hbs": "~4.0.1",
     "morgan": "~1.7.0",
     "mysql": "^2.13.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "webpack": "^2.7.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
