--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "~1.15.2",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^3.3.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
@@ -16,10 +17,12 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.1.0",
     "hbs": "~4.0.1",
+    "lodash": "^4.17.5",
     "morgan": "~1.7.0",
     "mysql": "^2.13.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "redis": "^2.8.0",
     "serve-favicon": "~2.3.0",
     "webpack": "^2.7.0"
   },
