--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport-local": "^1.0.0",
     "redis": "^2.8.0",
     "serve-favicon": "~2.3.0",
+    "uuid": "^3.2.1",
     "webpack": "^2.7.0"
   },
   "devDependencies": {
